Fixed support of paths with spaces
- both on Windows and Unix

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>